spell behaviour & packets