@@ -7,15 +7,18 @@ import io.redspace.ironsspellbooks.api.spells.*;
 import io.redspace.ironsspellbooks.api.magic.MagicData;
 import io.redspace.ironsspellbooks.entity.spells.shield.ShieldEntity;
 import io.redspace.ironsspellbooks.api.util.Utils;
-import net.minecraft.util.text.ITextComponent;
+import java.util.Arrays;
+import net.minecraft.util.text.TranslationTextComponent;
 import net.minecraft.util.text.IFormattableTextComponent;
 import net.minecraft.util.ResourceLocation;
 import net.minecraft.util.SoundEvent;
 import net.minecraft.util.SoundEvents;
 import net.minecraft.entity.LivingEntity;
+import net.minecraft.util.text.TranslationTextComponent;
 import net.minecraft.world.World;
 import net.minecraft.util.math.vector.Vector3d;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -25,7 +28,7 @@ public class ShieldSpell extends AbstractSpell {
 
     @Override
     public List<IFormattableTextComponent> getUniqueInfo(int spellLevel, LivingEntity caster) {
-        return List.of(
+        return Arrays.asList(
                 new TranslationTextComponent("ui.irons_spellbooks.hp", Utils.stringTruncation(getShieldHP(spellLevel, caster), 1))
         );
     }
@@ -74,7 +77,7 @@ public class ShieldSpell extends AbstractSpell {
     public void onCast(World level, int spellLevel, LivingEntity entity, MagicData playerMagicData) {
         ShieldEntity shield = new ShieldEntity(level, getShieldHP(spellLevel, entity));
         Vector3d spawn = Utils.raycastForEntity(level, entity, 5, true).getLocation();
-        shield.setPos(spawn);
+        shield.moveTo(spawn);
         shield.setRotation(entity.xRot, entity.yRot);
         level.addFreshEntity(shield);
         super.onCast(level, spellLevel, entity, playerMagicData);
